Refactor tagService cover it with tests